# NetworkCoverage

./: .flake8  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
docs/: providers_by_code.json
src/: main.py
src/network_coverage/application/: get_network_coverage_by_address.py
src/network_coverage/application/helpers/: address_to_gps.py  lamber93_to_gps.py
src/network_coverage/domain/: network_coverage.py  network_coverage_repository.py
src/network_coverage/infrastructure/csv/: csv_parser.py  lamber93_to_gps.py  lambert93_to_gps.py
src/network_coverage/infrastructure/http/: api_router.py  dependencies.py  network_coverage_router.py
src/network_coverage/infrastructure/persistence/sqlite/: database.py  network_coverage_sqlite_repository.py
src/network_coverage/infrastructure/persistence/sqlite/models/: network_coverage_model.py
tests/integration/network_coverage/: test_e2e_get_network_coverage.py  test_e2e_invalid_address.py  test_e2e_no_providers.py  test_e2e_with_accuracy.py
tests/unit/network_coverage/: test_csv_parser.py  test_get_coordinates_from_address.py  test_get_coverage_by_coordinates.py  test_get_network_by_adress.py  test_lambert_93.py  test_network_coverage_model.py  test_network_coverate_entity.py
