[project]
name = "papernest"
version = "0.1.0"
description = ""
authors = [
    {name = "Carolina Graciolli Siqueira",email = "cgraciolli@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.123.7,<0.124.0)",
    "pyproj (>=3.7.2,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "uvicorn[standard] (>=0.29.0,<0.30.0)",
    "requests (>=2.32.5,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
